add form components and css

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,11 +20,12 @@ $color_warning: #fa0;
 $color_success: #0f0;
 $color_info: rgb(58, 58, 243);
 
+$color_error_lighten_40: lighten($color_error, 40%);
 $input_font_color: $color_grey_10;
 $input_border_color: $color_grey_04;
 $input_border_color_focus: $color_grey_06;
 $input_bg_color_focus: rgb(219, 247, 247);
-$input_bg_color_error: rgb(252, 216, 216);
+$input_bg_color_error: rgb(255, 134, 134);
 $nav_active: $color_grey_10;
 
 $color_primary: $color_black;
