--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -141,66 +141,66 @@ input[type='checkbox'] {
   width: 15px;
 }
 
-fieldset {
-  @include flex-center-start-column;
-  padding: 5px;
-  border-radius: 5px;
-  background-color: $color_white;
-  border: 1px solid $input_border_color;
-  margin: 5px;
+// fieldset {
+//   @include flex-center-start-column;
+//   padding: 5px;
+//   border-radius: 5px;
+//   background-color: $color_white;
+//   border: 1px solid $input_border_color;
+//   margin: 5px;
 
-  &:focus {
-    outline-color: $input_border_color_focus;
-    color: $color_black;
-  }
+//   &:focus {
+//     outline-color: $input_border_color_focus;
+//     color: $color_black;
+//   }
 
-  .inputContent {
-    width: 100%;
-    @include flex-center-center;
+//   .inputContent {
+//     width: 100%;
+//     @include flex-center-center;
 
-    input {
-      width: 100%;
-      border: none;
-      line-height: 20px;
-      font-size: 16px;
+//     input {
+//       width: 100%;
+//       border: none;
+//       line-height: 20px;
+//       font-size: 16px;
 
-      &:-webkit-autofill,
-      &:-webkit-autofill:focus {
-        transition:
-          background-color 0s 600000s,
-          color 0s 600000s;
-      }
+//       &:-webkit-autofill,
+//       &:-webkit-autofill:focus {
+//         transition:
+//           background-color 0s 600000s,
+//           color 0s 600000s;
+//       }
 
-      &:focus {
-        outline: none;
-      }
-    }
+//       &:focus {
+//         outline: none;
+//       }
+//     }
 
-    svg {
-      margin-left: 10px;
-      width: 20px;
-      cursor: pointer;
-    }
-  }
+//     svg {
+//       margin-left: 10px;
+//       width: 20px;
+//       cursor: pointer;
+//     }
+//   }
 
-  select {
-    border: none;
-    background-color: $color_white;
-    width: 100%;
-    height: 30px;
-    font-size: 1rem;
-    cursor: pointer;
+//   select {
+//     border: none;
+//     background-color: $color_white;
+//     width: 100%;
+//     height: 30px;
+//     font-size: 1rem;
+//     cursor: pointer;
 
-    &:focus {
-      outline: none;
-    }
-    &:active {
-      cursor: pointer;
-    }
-  }
-  .errorLine {
-    color: $color_error;
-    font-style: italic;
-    font-size: 0.8em;
-  }
-}
+//     &:focus {
+//       outline: none;
+//     }
+//     &:active {
+//       cursor: pointer;
+//     }
+//   }
+//   .errorLine {
+//     color: $color_error;
+//     font-style: italic;
+//     font-size: 0.8em;
+//   }
+// }
