--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 $color_black: #000;
 $color_grey_14: #111;
 $color_grey_13: #222;
@@ -20,7 +22,7 @@ $color_warning: #fa0;
 $color_success: #0f0;
 $color_info: rgb(58, 58, 243);
 
-$color_error_lighten_40: lighten($color_error, 40%);
+$color_error_lighten_40: color.scale($color_error, $lightness: 20%);
 $input_font_color: $color_grey_10;
 $input_border_color: $color_grey_04;
 $input_border_color_focus: $color_grey_06;
