--- a/app/(auth)/_header/header.module.scss
+++ b/app/(auth)/_header/header.module.scss
@@ -28,6 +28,7 @@
     padding-left: 10px;
     font-size: 2.5em;
     font-weight: 800;
+    height: 100%;
     cursor: pointer;
   }
 
@@ -53,13 +54,13 @@
       }
     }
 
-    &:hover {
-      .profileMenu {
-        @include sub-menu;
-        top: 51px;
-        right: -10px;
-      }
-    }
+    // &:hover {
+    //   .profileMenu {
+    //     @include sub-menu;
+    //     top: 51px;
+    //     right: -10px;
+    //   }
+    // }
   }
 
   .navElement {
@@ -77,41 +78,41 @@
       }
     }
 
-    > ul {
-      @include main.flex-end;
+    // > ul {
+    //   @include main.flex-end;
 
-      > li {
-        width: 120px;
-        text-align: center;
-        line-height: 50px;
-        border-bottom: 2px solid main.$color_grey_03;
+    //   > li {
+    //     width: 120px;
+    //     text-align: center;
+    //     line-height: 50px;
+    //     border-bottom: 2px solid main.$color_grey_03;
 
-        &.isActive {
-          border-bottom: 2px solid main.$nav_active;
-          font-weight: 700;
-        }
+    //     &.isActive {
+    //       border-bottom: 2px solid main.$nav_active;
+    //       font-weight: 700;
+    //     }
 
-        .tabMenu {
-          display: none;
-        }
+    //     .tabMenu {
+    //       display: none;
+    //     }
 
-        &:hover {
-          border-bottom: 2px solid main.$color_primary;
+    //     &:hover {
+    //       border-bottom: 2px solid main.$color_primary;
 
-          .tabMenu {
-            @include sub-menu;
-            top: 52px;
+    //       .tabMenu {
+    //         @include sub-menu;
+    //         top: 52px;
 
-            ul {
-              li {
-                line-height: 25px;
-                text-align: left;
-                padding: 2px 0 2px 10px;
-              }
-            }
-          }
-        }
-      }
-    }
+    //         ul {
+    //           li {
+    //             line-height: 25px;
+    //             text-align: left;
+    //             padding: 2px 0 2px 10px;
+    //           }
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
   }
 }
