--- a/shared/components/dropdownMenu/dropDownMenu.module.scss
+++ b/shared/components/dropdownMenu/dropDownMenu.module.scss
@@ -1,15 +1,17 @@
 @use '../../../scss/main';
 
 .dropDownItem {
+  flex: 1;
+  @include main.flex-end-center;
   position: relative;
   display: inline-block;
-  height: 100%;
+  // height: 100%;
 
-  p {
-    @include main.flex-center-center;
-    height: 100%;
-    cursor: pointer;
-  }
+  // p {
+  //   @include main.flex-center-center;
+  //   height: 100%;
+  //   cursor: pointer;
+  // }
 
   .dropDown {
     display: none;
@@ -22,16 +24,17 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
-  &:hover .dropDown,
-  .dropDown:hover {
-    display: block;
+  // &:hover .dropDown,
+  // .dropDown:hover {
+  //   display: block;
+  // }
+  &:hover {
+    height: calc(100% - 1px);
+    p {
+      font-weight: 700;
+    }
+    .dropDown {
+      display: block;
+    }
   }
-  //   &:hover {
-  //     p {
-  //       font-weight: 700;
-  //     }
-  //     .dropDown {
-  //       display: block;
-  //     }
-  //   }
 }
