--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,6 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -42,7 +38,6 @@
 }
 
 :root {
-  --radius: 0.3rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
@@ -119,6 +114,6 @@
     @apply bg-background;
   }
   section {
-    @apply rounded-md bg-primary;
+    @apply rounded-sm bg-primary;
   }
 }
