--- a/src/app/(public)/login/login.module.scss
+++ b/src/app/(public)/login/login.module.scss
@@ -1,18 +1,20 @@
-@use '../../../scss/main';
+@use '../../../styles/theme';
 
 .loginPage {
-  @include main.flex-center-center;
+  height: 100vh;
+  width: 100vw;
+  @include theme.flex-center-center;
 
   .section {
     width: 400px;
     height: 200px;
     padding: 20px;
 
-    .form {
-      @include main.flex-center-center-column;
-      .input {
-        width: 240px;
-      }
-    }
+    // .form {
+    //   @include theme.flex-center-center;
+    //   .input {
+    //     width: 240px;
+    //   }
+    // }
   }
 }
