rhf is configured (ouf)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,11 @@ $shadowBlur: 6px;
 $white: hsl(0, 0, 100%);
 $black: hsl(0, 0, 1);
 
+// FONTS
+$fontSize: 1rem;
+$fontSizeUpper: 1.2rem;
+$fontSizeLower: 0.8rem;
+
 $primary: hsla(198, 57%, 40%, 1);
 $primary-fg: $white;
 $primary-light: hsla(198, 57%, 60%, 1);
