--- a/src/shared/components/ui/formField/formField.module.scss
+++ b/src/shared/components/ui/formField/formField.module.scss
@@ -4,13 +4,21 @@
   display: flex;
   justify-content: start;
   align-items: center;
+  margin-bottom: 16px;
 
+  &.error {
+    margin-bottom: 0;
+  }
   .label {
     margin-right: 10px;
   }
   &.top {
     flex-direction: column;
     align-items: start;
+
+    .label {
+      margin-bottom: 5px;
+    }
   }
   &.right {
     flex-direction: row-reverse;
