--- a/src/shared/components/ui/input/input.module.scss
+++ b/src/shared/components/ui/input/input.module.scss
@@ -1,1 +1,20 @@
 @import '../../../../styles/theme';
+
+.inputContainer {
+  @include flex-start-center;
+  background-color: $white;
+  border-radius: $borderRadius;
+  padding: 5px;
+
+  input {
+    flex: 1;
+    height: 24px;
+  }
+
+  svg {
+    height: 24px;
+    width: 24px;
+    cursor: pointer;
+    color: var(--color-background);
+  }
+}
