--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,41 +20,54 @@ $light-blue: hsla(195, 54%, 78%, 1);
 
 // CONSTANTS
 $borderRadius: 6px;
+// shadow
 $shadowBlur: 10px;
-$white: hsl(0, 0, 100%);
-$black: hsl(0, 0, 1);
+$shadowSpread: 3px;
+$shadowOffsetX: 0;
+$shadowOffsetY: 0;
 
 // FONTS
 $fontSize: 1rem;
 $fontSizeUpper: 1.2rem;
 $fontSizeLower: 0.8rem;
 
+// COLOR
+$white: hsl(0, 0, 100%);
+$black: hsl(0, 0, 1);
+
 $primary: hsla(198, 57%, 40%, 1);
 $primary-fg: $white;
 $primary-light: hsla(198, 57%, 60%, 1);
 $primary-dark: hsla(198, 57%, 30%, 1);
-$primary-shadow: 0 0 $shadowBlur 0 hsla(198, 57%, 30%, 1);
+$primary-shadow: $shadowOffsetX $shadowOffsetY $shadowBlur $shadowSpread
+  $primary-light;
 
 $warning: hsla(26, 83%, 50%, 1);
 $warning-fg: $black;
 $warning-light: hsla(26, 83%, 60%, 1);
 $warning-dark: hsla(26, 83%, 40%, 1);
-$warning-shadow: 0 0 $shadowBlur 0 hsla(26, 83%, 40%, 1);
+$warning-shadow: $shadowOffsetX $shadowOffsetY $shadowBlur $shadowSpread
+  $warning-light;
 
 $error: hsla(353, 86%, 54%, 1);
 $error-fg: $black;
 $error-light: hsla(353, 86%, 64%, 1);
 $error-dark: hsla(353, 86%, 44%, 1);
-$error-shadow: 0 0 $shadowBlur 0 hsla(353, 86%, 44%, 1);
+$error-shadow: $shadowOffsetX $shadowOffsetY $shadowBlur $shadowSpread
+  $error-light;
 
 $success: hsla(124, 67%, 69%, 1);
 $success-fg: hsl(0, 0, 1);
 $success-light: hsla(124, 67%, 79%, 1);
 $success-dark: hsla(124, 67%, 59%, 1);
-$success-shadow: 0 0 $shadowBlur 0 hsla(124, 67%, 59%, 1);
+$success-shadow: $shadowOffsetX $shadowOffsetY $shadowBlur $shadowSpread
+  $success-light;
 
 $section-bg: hsla(205, 98%, 20%, 1);
-$section-shadow: 0 0 $shadowBlur 3px hsla(202, 56%, 38%, 1);
+$section-bg-light: hsla(205, 98%, 30%, 1);
+$section-bg-dark: hsla(205, 98%, 10%, 1);
+$section-shadow: $shadowOffsetX $shadowOffsetY $shadowBlur $shadowSpread
+  $section-bg-light;
 
 $white: hsl(0, 0, 100%);
 $black: hsl(0, 0, 1);
