--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 p,
 button {
   padding: 0;
@@ -8,4 +11,8 @@ button {
 input {
   border: none;
   outline: none;
+}
+
+form {
+  width: 100%;
 }
