--- a/src/styles/mixins/flex_mixins.scss
+++ b/src/styles/mixins/flex_mixins.scss
@@ -9,3 +9,8 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin flex-column-center-center {
+  @include flex-center-center;
+  flex-direction: column;
+}
