update error color

--- a/src/shared/components/ui/formField/formField.module.scss
+++ b/src/shared/components/ui/formField/formField.module.scss
@@ -36,7 +36,7 @@
 
   .childrenContainer {
     .errorText {
-      color: $error;
+      color: var(--form-error-foreground);
       font-style: italic;
       font-size: $fontSizeLower;
     }
