--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@
   --color-background: hsla(206, 97%, 15%, 1);
   --color-foreground: hsla(0, 0%, 100%, 1);
   --color-primary: hsla(54, 89%, 56%, 1);
+  --form-error-foreground: hsla(353, 86%, 84%, 1);
 }
 
 // hsla(hue, saturation, lightness, alpha)
