--- a/src/shared/components/ui/input/input.module.scss
+++ b/src/shared/components/ui/input/input.module.scss
@@ -17,4 +17,14 @@
     cursor: pointer;
     color: var(--color-background);
   }
+
+  &.error {
+    border: 1px solid $error;
+    padding: 4px;
+    background-color: var(--form-error-foreground);
+
+    input {
+      background-color: var(--form-error-foreground);
+    }
+  }
 }
