--- a/src/app/(public)/login/login.module.scss
+++ b/src/app/(public)/login/login.module.scss
@@ -1,13 +1,13 @@
-@use '../../../styles/theme';
+@use '../../../styles/main';
 
 .login {
   height: 100vh;
   width: 100vw;
-  @include theme.flex-center-center;
+  @include main.flex-center-center;
 
   .section {
     form {
-      @include theme.flex-column-center-center;
+      @include main.flex-column-center-center;
       width: 350px;
       // height: 200px;
       padding: 20px;
