--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,7 @@ $light-blue: hsla(195, 54%, 78%, 1);
 
 // CONSTANTS
 $borderRadius: 6px;
+$headerHeight: 50px;
 
 // shadow
 $shadowBlur: 8px;
@@ -19,6 +20,8 @@ $shadowSpread: 2px;
 $shadowOffsetX: 0;
 $shadowOffsetY: 0;
 
+// Dropdown
+$dorpdownHover: hsla(205, 98%, 20%, 1);
 // FONTS
 
 $fontSizeUpper: 1.2rem;
