--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $shadowOffsetY: 0;
 
 // Dropdown
 $dorpdownHover: hsla(205, 98%, 20%, 1);
+$dropdownShadow: $shadowOffsetX 2px $shadowBlur 0 hsla(205, 98%, 20%, 1);
 // FONTS
 
 $fontSizeUpper: 1.2rem;
