Squashed commit of the following:
commit c336e0c28cf509704ce7b06a51df1e3b777f8349
Author: david mosca <david.mosca69@gmail.com>
Date:   Sat Apr 26 16:50:14 2025 +0200

    add cursor to brand

commit 0307333143c12502b2502519eddf0f737879977f
Author: david mosca <david.mosca69@gmail.com>
Date:   Sat Apr 26 16:48:43 2025 +0200

    dropdown menu is ok

commit 056dd8a52f6e18d76b29f283a5a6f2ce1e8e4d71
Author: david mosca <david.mosca69@gmail.com>
Date:   Sat Apr 26 16:34:22 2025 +0200

    fix profile css

commit 39453f82b102d81586b6ad0f73bb6327de8cc2e9
Author: david mosca <david.mosca69@gmail.com>
Date:   Sat Apr 26 16:31:00 2025 +0200

    create dropdown

commit c947506e6cca45db1a9057e6e412482701d373cf
Author: david mosca <david.mosca69@gmail.com>
Date:   Sat Apr 26 01:03:11 2025 +0200

    create reactQuery for navigation

commit 194e5ba317fa26ebc37d45f93afdc86704da54c6
Author: david mosca <david.mosca69@gmail.com>
Date:   Sat Apr 26 01:02:52 2025 +0200

    update db

commit 453faafa2e2fdcc2f06592105bdff5f1f3db69ea
Author: david mosca <david.mosca69@gmail.com>
Date:   Fri Apr 25 17:52:04 2025 +0200

    install axios et react-query

commit 4c49baa1076f8dfb70d2ca7e54bc68e8146c9f1b
Author: david mosca <david.mosca69@gmail.com>
Date:   Fri Apr 25 17:46:05 2025 +0200

    update header

commit 4a7d263877c8572821cfc8b1d23fc8ef9a4ffe52
Author: david mosca <david.mosca69@gmail.com>
Date:   Fri Apr 25 17:11:43 2025 +0200

    add dropdown components

commit e19456162c33ec2ac99abe2b57f9e2440fd64d7e
Author: david mosca <david.mosca69@gmail.com>
Date:   Fri Apr 25 16:54:47 2025 +0200

    add navigation table with seed and ts config

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,18 @@
+:root {
+  --color-background: hsla(206, 97%, 15%, 1);
+  --color-foreground: hsla(54, 89%, 56%, 1);
+  --color-primary: hsla(54, 89%, 56%, 1);
+  --form-error-foreground: hsla(353, 86%, 84%, 1);
+  --font-size: 1rem;
+}
+
 * {
   box-sizing: border-box;
 }
 p,
-button {
+button,
+ul,
+li {
   padding: 0;
   margin: 0;
   border: none;
@@ -15,4 +25,33 @@ input {
 
 form {
   width: 100%;
+}
+
+html {
+  background-color: var(--color-background);
+  color: var(--color-foreground);
+  font-size: var(--font-size);
+}
+
+ul {
+  list-style: none;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+h5 {
+  font-size: 1.25rem;
+}
+h6 {
+  font-size: 1rem;
 }
