--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,3 @@
-/* SCSS HSL */
-// hsla(hue, saturation, lightness, alpha)
-:root {
-  --color-background: hsla(206, 97%, 15%, 1);
-  --color-foreground: hsla(0, 0%, 100%, 1);
-  --color-primary: hsla(54, 89%, 56%, 1);
-  --form-error-foreground: hsla(353, 86%, 84%, 1);
-}
-
 // hsla(hue, saturation, lightness, alpha)
 $prussian-blue: hsla(206, 97%, 15%, 1);
 $indigo-dye: hsla(205, 98%, 20%, 1);
@@ -21,6 +12,7 @@ $light-blue: hsla(195, 54%, 78%, 1);
 
 // CONSTANTS
 $borderRadius: 6px;
+$headerHeight: 50px;
 
 // shadow
 $shadowBlur: 8px;
@@ -28,8 +20,11 @@ $shadowSpread: 2px;
 $shadowOffsetX: 0;
 $shadowOffsetY: 0;
 
+// Dropdown
+$dorpdownHover: hsla(205, 98%, 20%, 1);
+$dropdownShadow: $shadowOffsetX 2px $shadowBlur 0 hsla(205, 98%, 20%, 1);
 // FONTS
-$fontSize: 1rem;
+
 $fontSizeUpper: 1.2rem;
 $fontSizeLower: 0.8rem;
 
