select category is ok

--- a/src/shared/components/ui/select/select.module.scss
+++ b/src/shared/components/ui/select/select.module.scss
@@ -1,4 +1,7 @@
-@import '../../../../styles/';
+@import '../../../../styles/main';
 
 .select {
+  min-width: 100px;
+  height: 34px;
+  border-radius: $borderRadius;
 }
