update css for searchItemEngine

--- a/src/modules/searchItemEngine/searchItemEngine.module.scss
+++ b/src/modules/searchItemEngine/searchItemEngine.module.scss
@@ -1,6 +1,10 @@
 @import '../../styles/main';
 
 .searchItemEngine {
-  @include flex-center-center;
+  @include flex-around-center;
   height: 150px;
+
+  // > div {
+  //   margin-right: 10%;
+  // }
 }
