--- a/src/styles/mixins/flex_mixins.scss
+++ b/src/styles/mixins/flex_mixins.scss
@@ -13,6 +13,16 @@
   justify-content: center;
   align-items: center;
 }
+@mixin flex-between-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@mixin flex-around-center {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 @mixin flex-end-center {
   display: flex;
   justify-content: flex-end;
