--- a/src/styles/mixins/flex_mixins.scss
+++ b/src/styles/mixins/flex_mixins.scss
@@ -37,3 +37,8 @@
   @include flex-start-start;
   flex-direction: column;
 }
+
+@mixin flex-column-start-center {
+  @include flex-start-center;
+  flex-direction: column;
+}
