--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,7 +21,8 @@ $shadowOffsetX: 0;
 $shadowOffsetY: 0;
 
 // Dropdown
-$dorpdownHover: hsla(205, 98%, 20%, 1);
+$dropdownHover: hsla(202, 56%, 38%, 1);
+$dropdownSubMenu: hsla(205, 99%, 26%, 1);
 $dropdownShadow: $shadowOffsetX 2px $shadowBlur 0 hsla(205, 98%, 20%, 1);
 // FONTS
 
