--- a/src/shared/components/ui/formField/formField.module.scss
+++ b/src/shared/components/ui/formField/formField.module.scss
@@ -35,6 +35,7 @@
   }
 
   .childrenContainer {
+    width: 100%;
     .errorText {
       color: var(--form-error-foreground);
       font-style: italic;
