item category creation modal created

--- a/src/modules/itemCategory/components/itemCategoryForm/itemCategoryForm.module.scss
+++ b/src/modules/itemCategory/components/itemCategoryForm/itemCategoryForm.module.scss
@@ -1,4 +1,13 @@
 @import '../../../../styles/main';
 
 .itemCategoryForm {
+  width: 300px;
+  margin: auto;
+  text-align: center;
+
+  button {
+    width: 60%;
+    margin: auto;
+    margin-top: 20px;
+  }
 }
