--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 :root {
   --color-background: hsla(206, 97%, 15%, 1);
+  --modal-color-bg: hsla(205, 99%, 26%, 1);
   --color-foreground: hsla(54, 89%, 56%, 1);
   --color-primary: hsla(54, 89%, 56%, 1);
   --form-error-foreground: hsla(353, 86%, 84%, 1);
