--- a/src/modules/itemType/components/itemCategoryTable/itemTypeTable.module.scss
+++ b/src/modules/itemType/components/itemCategoryTable/itemTypeTable.module.scss
@@ -1,4 +1,19 @@
 @import '../../../../styles/main';
 
 .itemTypeTable {
+  width: 50%;
+
+  tbody {
+    tr {
+      td:nth-child(1) {
+        width: 40%;
+      }
+      td:nth-child(2) {
+        width: 10%;
+      }
+      td:nth-child(3) {
+        width: 20%;
+      }
+    }
+  }
 }
